# int6_miniproject8

./: .gitignore  Cargo.toml  Makefile  README.md  requirements.txt
.github/workflows/: rustci.yml
mylib/: main.py
performance/: pythonperf.md  rustperf.md
src/: lib.rs  main.rs
tests/: my_tests.rs  test_main.py
