[package]
name = "int6_miniproject8"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
tempfile = "3.3"
assert_cmd = "2.0"
predicates = "2.0"
tempdir = "0.3"
ndarray = "0.16.1"
ndarray-csv = "0.5.3"
csv = "1.3.0"
polars = { version = "0.33", features = ["csv"] }
jemallocator = "0.5.4"
jemalloc-ctl = "0.5.4"
sys-info = "0.9"